--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Readme
 
-My current xmonad configuration. It is splitted on several files for easier
+My current xmonad configuration. It is split into several files for easier
 maintenance. Currently I change and try out a lot therefore a few things are not
 at the right place.
 
