Fix typo in README

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-# Readme
+# About
 
 My current xmonad configuration. It is split into several files for easier
 maintenance. Currently I change and try out a lot therefore a few things are not
-at the right place.
+in the right place.
 
 # Credits
 
